manifests/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: app1:latest
          imagePullPolicy: Never  # Add this line
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: ingress-demo
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 5000
