manifests/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: app2:latest
          imagePullPolicy: Never  
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: ingress-demo
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 5000
